# atlantis_watcher

./: .gitignore  BUILD_README.md  README.md  build.py  build_advanced.py  build_config.py  main.py  pyproject.toml  version_info.txt
template/: index.html
webgui/: index.html  manifest.json
